feat: ajout de PlayerLevelChangeEvent + fire dans les listeners/commandes
Nouvel événement Bukkit PlayerLevelChangeEvent (avec enum Reason)
permettant aux plugins tiers (EnferChat) d'écouter les changements
de niveau sans dépendance directe à la logique interne.

- events/PlayerLevelChangeEvent.java : event + Reason enum
- PlaytimeScheduler : détecte le level-up et fire PLAYTIME
- PlayerDeathListener : fire DEATH_RESET après reset
- NiveauCommand : fire ADMIN_ADD/REMOVE/SET/RESET dans chaque handler
- Fix : Arrays.asList → List.of (import Arrays supprimé précédemment)

https://claude.ai/code/session_018Ywy3io6hsG9rBaNKUWLDQ